//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Person {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  nickname String
  firstname String
  lastname String
  title String
  twitter String
  projects Project [not null]
  user User [not null]
}

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  role Role [not null]
  email String [unique]
  password String
  ethAddresses String [not null]
  ens String
  person Person
  resources Resource [not null]
  personId String
}

Table Resource {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  type ResourceEnum [not null]
  title String [not null]
  content String
  fileUrl String
  author User
  authorId String [not null]
  projects Project [not null]
}

Table Category {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  description String [not null]
  projects ProjectCategories [not null]
  parentCategoryId String
  subcategories Category [not null]
  parentCategory Category
}

Table ProjectCategories {
  id String [pk]
  project Project
  category Category
  projectId String
  categoryId String
}

Table Risk {
  id String [pk]
  name String [not null]
  projectId String
  project Project
}

Table Feature {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  introduction String [not null]
  description String [not null]
  projectId String
  project Project
}

Table Project {
  id String [pk]
  name String [not null]
  introduction String
  description String [not null]
  website String [not null]
  twitter String
  discord String
  github String
  logo String
  image String
  tokenId String
  isFeatured Boolean [not null, default: false]
  features Feature [not null]
  developerDocs DeveloperDoc [not null]
  resources Resource [not null]
  risks Risk [not null]
  lessons Lesson [not null]
  parentProjectId String
  subprojects Project [not null]
  parentProject Project
  founders Person [not null]
  competitors Project [not null]
  categories ProjectCategories [not null]
  technologies String [not null]
  developmentActivity String [not null]
  projectCreationDate String
  ticker String
  price String
  whitePaper String
  demoVideo String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  projectCompetitor Project
  projectCompetitorId String
}

Table DeveloperDoc {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  official Boolean [not null]
  url String [not null]
  project Project
  projectId String
}

Table LessonResource {
  id String [pk]
  title String [not null]
  content String [not null]
  lesson Lesson
  lessonId String
}

Table Section {
  id String [pk]
  title String [not null]
  content String [not null]
  lesson Lesson
  lessonId String
}

Table Quest {
  id String [pk]
  title String [not null]
  content String [not null]
  lesson Lesson
  lessonId String
}

Table Challenge {
  id String [pk]
  title String [not null]
  content String [not null]
  lesson Lesson
  lessonId String
}

Table Lesson {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  type LessonEnum [not null]
  name String [not null]
  sections Section [not null]
  resources LessonResource [not null]
  quests Quest [not null]
  challenges Challenge [not null]
  bounties String [not null]
  project Project
  projectId String
}

Table PersonToProject {
  projectsId String [ref: > Project.id]
  foundersId String [ref: > Person.id]
}

Table ProjectToResource {
  projectsId String [ref: > Project.id]
  resourcesId String [ref: > Resource.id]
}

Enum Role {
  ADMIN
  CREATOR
  USER
}

Enum LessonEnum {
  BRANCHED
  DECRYPTED
}

Enum ResourceEnum {
  WORKSHOP
  CONFTALK
  TUTORIAL
  ARTICLE
  REVIEW
  INTERVIEW
  PODCAST
}

Ref: User.personId > Person.id

Ref: Resource.authorId > User.id

Ref: Category.parentCategoryId > Category.id

Ref: ProjectCategories.projectId > Project.id

Ref: ProjectCategories.categoryId > Category.id

Ref: Risk.projectId > Project.id

Ref: Feature.projectId > Project.id

Ref: Project.parentProjectId > Project.id

Ref: Project.projectCompetitorId > Project.id

Ref: DeveloperDoc.projectId > Project.id

Ref: LessonResource.lessonId > Lesson.id

Ref: Section.lessonId > Lesson.id

Ref: Quest.lessonId > Lesson.id

Ref: Challenge.lessonId > Lesson.id

Ref: Lesson.projectId > Project.id